Finalize features and submission cleanup